Closed
Bug 1382093
Opened 8 years ago
Closed 8 years ago
Crash in mozilla::dom::TabChild::InternalSetDocShellIsActive
Categories
(Core :: DOM: Content Processes, defect)
Tracking
()
RESOLVED
FIXED
mozilla56
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox54 | --- | unaffected |
firefox55 | --- | unaffected |
firefox56 | --- | fixed |
People
(Reporter: ting, Assigned: nika)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
1.09 KB,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-56e8dae9-89f0-4b3e-b99e-c55240170718.
=============================================================
Top #24 of Nightly 20170716030208 on Windows, 9 reports from 7 installations. The first observation was from build 20170714030205, bug 1378281 seems the culprit.
Reporter | ||
Updated•8 years ago
|
Flags: needinfo?(michael)
Assignee | ||
Comment 1•8 years ago
|
||
It looks like the line which we were crashing on was dereferencing a non-null-checked docShell variable. This should avoid that situation.
MozReview-Commit-ID: JHtmTSomFlb
Attachment #8887965 -
Flags: review?(bugs)
Assignee | ||
Updated•8 years ago
|
Assignee: nobody → michael
Flags: needinfo?(michael)
Updated•8 years ago
|
Attachment #8887965 -
Flags: review?(bugs) → review+
Pushed by michael@thelayzells.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/508e4725fa73
Null check docShell in InternalSetDocShellIsActive, r=smaug
Comment 3•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox56:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Updated•8 years ago
|
status-firefox54:
--- → unaffected
status-firefox55:
--- → unaffected
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•