Bug 1382093 - Null check docShell in InternalSetDocShellIsActive, r=smaug

MozReview-Commit-ID: JHtmTSomFlb